# RaceSF

./: .editorconfig  .gitignore  ATTRIBUTION.md  LICENSE  PROJECT_STATE.md  README.md
.cursor/rules/: project.mdc  python.mdc  unreal.mdc
config/: landmarks.json  road_defaults.json  route_profiles.json  sf_mvp_region.json
docs/: architecture.md  data-pipeline.md  gameplay.md  milestones.md  packaging.md  profiling.md  setup.md  troubleshooting.md  unreal-import.md  visual-direction.md
scripts/: bootstrap_playable.ps1  setup_unreal.ps1  sync_map_export.ps1
tools/geo_pipeline/: pyproject.toml  requirements.txt
tools/geo_pipeline/src/sf_racer_geo/: __init__.py  cli.py  coordinates.py  download_buildings.py  download_roads.py  export_unreal.py  graph.py  landmark_snapping.py  normalize_buildings.py  normalize_roads.py  preview.py  route_generation.py  route_scoring.py  settings.py  validation.py
tools/geo_pipeline/tests/: test_coordinates.py  test_exports.py  test_graph.py  test_landmarks.py  test_routes.py
unreal/SFRouteRacer/: SFRouteRacer.uproject
unreal/SFRouteRacer/Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
unreal/SFRouteRacer/Content/: README.md
unreal/SFRouteRacer/Content/Maps/: README.md  SFWaterfrontMVP.umap
unreal/SFRouteRacer/Content/Materials/: M_SFCarUnlit.uasset  M_SFGrayboxUnlit.uasset  M_SFStartUnlit.uasset
unreal/SFRouteRacer/Content/Python/: bootstrap_playable.py  create_graybox_material.py  validate_sf_export.py
unreal/SFRouteRacer/Source/: SFRouteRacer.Target.cs  SFRouteRacerEditor.Target.cs
(+77 files in other folders)
